[package]
name = "bevy_atmosphere"
description = "A procedural sky plugin for bevy"
version = "0.1.3"
edition = "2018"
authors = ["JonahPlusPlus <33059163+JonahPlusPlus@users.noreply.github.com>"]
license = "MIT"
documentation = "https://docs.rs/bevy_atmosphere"
homepage = "https://github.com/JonahPlusPlus/bevy_atmosphere"
repository = "https://github.com/JonahPlusPlus/bevy_atmosphere"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["render"] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_flycam = "0.5"

[[example]]
name = "cycle"
path = "examples/cycle.rs"
